--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 .DS_Store
 output/*
 html/*
+theme/static/old/css/main.css
+theme/static/old/css/pygment.css
+theme/static/old/css/reset.css
+theme/static/old/css/wide.css
