--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ theme/static/old/css/main.css
 theme/static/old/css/pygment.css
 theme/static/old/css/reset.css
 theme/static/old/css/wide.css
+.workon
